--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           
           
         </table>
+
+        <button type="button" class="btn btn-primary mt-3 ms-auto">Cetak Data ke file exel</button>
       </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
