--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="refresh"  content="1" /> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard Water Level</title>
     <link
@@ -25,16 +25,17 @@
     </nav>
     <!-- #### navbar end #### -->
 
-    <section class="data-pages mt-5 ">
-      <div class="d-flex">
-              <div class="container">
-        <table id="myTable" class="mx-auto"></table>
-      </div>    
-      </div>
-  
-    </section>
 
-    
+          <div class="container mt-4">
+              <table id="myTable" class=" mx-auto"></table>
+          </div>
+          <div class="container bg-success pages-button mt-3">
+            <div class="row align-items-center">
+                <button type="button" class="btn btn-primary">Cetak Data ke CSV</button>
+            </div>
+
+          </div>
+
 
 
     <script
