--- a/index.html
+++ b/index.html
@@ -16,27 +16,35 @@
   </head>
   <body>
     <!-- #### navbar start #### -->
-    <nav class="navbar bg-body-tertiary shadow-sm py-4">
-      <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1 mx-auto fw-bold"
-          >Dashboard Data WaterLevel</span
-        >
-      </div>
-    </nav>
+    <section id="navbar-page">
+      <nav class="navbar bg-body-tertiary shadow-sm py-4">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1 mx-auto fw-bold"
+            >Dashboard Data WaterLevel</span
+          >
+        </div>
+      </nav>
+    </section>
+
     <!-- #### navbar end #### -->
 
+    <section id="page-main">
+      <div class="container mt-4">
+        <table id="myTable" class="mx-auto"></table>
+      </div>
+      <div class="container bg-success pages-button mt-3">
+        <div class="row align-items-center">
+          <button type="button" class="btn btn-primary" onclick="tableToCSV()">
+            Cetak Data ke CSV
+          </button>
+        </div>
+      </div>
+    </section>
 
-          <div class="container mt-4">
-              <table id="myTable" class=" mx-auto"></table>
-          </div>
-          <div class="container bg-success pages-button mt-3">
-            <div class="row align-items-center">
-                <button type="button" class="btn btn-primary">Cetak Data ke CSV</button>
-            </div>
 
-          </div>
-
-
+              <footer>
+        <p>Developed by @WaterLevelTeam</p>
+      </footer>       
 
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
@@ -44,5 +52,61 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
+    <script type="text/javascript">
+      function tableToCSV() {
+        // Variable to store the final csv data
+        var csv_data = [];
+
+        // Get each row data
+        var rows = document.getElementsByTagName("tr");
+        for (var i = 0; i < rows.length; i++) {
+          // Get each column data
+          var cols = rows[i].querySelectorAll("td,th");
+
+          // Stores each csv row data
+          var csvrow = [];
+          for (var j = 0; j < cols.length; j++) {
+            // Get the text data of each cell
+            // of a row and push it to csvrow
+            csvrow.push(cols[j].innerHTML);
+          }
+
+          // Combine each column value with comma
+          csv_data.push(csvrow.join(","));
+        }
+
+        // Combine each row data with new line character
+        csv_data = csv_data.join("\n");
+
+        // Call this function to download csv file
+        downloadCSVFile(csv_data);
+      }
+
+      function downloadCSVFile(csv_data) {
+        // Create CSV file object and feed
+        // our csv_data into it
+        CSVFile = new Blob([csv_data], {
+          type: "text/csv",
+        });
+
+        // Create to temporary link to initiate
+        // download process
+        var temp_link = document.createElement("a");
+
+        // Download csv file
+        temp_link.download = "data-waterlevel.csv";
+        var url = window.URL.createObjectURL(CSVFile);
+        temp_link.href = url;
+
+        // This link should not be displayed
+        temp_link.style.display = "none";
+        document.body.appendChild(temp_link);
+
+        // Automatically click the link to
+        // trigger download
+        temp_link.click();
+        document.body.removeChild(temp_link);
+      }
+    </script>
   </body>
 </html>
