--- a/index.html
+++ b/index.html
@@ -1,112 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!-- <meta http-equiv="refresh"  content="1" /> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard Water Level</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="sign-in.css" />
-  </head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+ <style>
+
+ </style>
+</head>
   <body>
-    <!-- #### navbar start #### -->
-    <section id="navbar-page">
-      <nav class="navbar bg-body-tertiary shadow-sm py-4">
-        <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1 mx-auto fw-bold"
-            >Dashboard Data WaterLevel</span
-          >
+
+<section class="vh-100 gradient-custom">
+  <div class="container py-auto h-100 mx-auto">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-light text-dark" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Dashboard Water Level</h2>
+              <p class="text-dark-50 mb-3">Please enter your login and password!</p>
+
+              <div class="form-outline form-white mb-4">
+                <label class="form-label" for="username"></label>
+                <input type="email" id="username" class="form-control form-control-lg" placeholder="Masukan Username" />
+                
+              </div>
+
+              <div class="form-outline form-white mb-4">
+                <label class="form-label" for="password"></label>
+                <input type="password" id="password" class="form-control form-control-lg" placeholder="Masukan Password" />
+              </div>
+              <button class="btn btn-outline-dark btn-lg px-5" type="submit" id="login-button">Login</button>
+            </div>
+          </div>
         </div>
-      </nav>
-    </section>
-
-    <!-- #### navbar end #### -->
-
-    <section id="page-main">
-      <div class="container mt-4">
-        <table id="myTable" class="mx-auto"></table>
       </div>
-      <div class="container bg-success pages-button mt-3">
-        <div class="row align-items-center">
-          <button type="button" class="btn btn-primary" onclick="tableToCSV()">
-            Cetak Data ke CSV
-          </button>
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
+    <script>
+      // Event listener untuk tombol login
+      document
+        .getElementById("login-button")
+        .addEventListener("click", function (event) {
+          event.preventDefault(); // mencegah form dari submit
 
+          // Ambil nilai input dari form
+          var username = document.getElementById("username").value;
+          var password = document.getElementById("password").value;
 
-              <footer>
-        <p>Developed by @WaterLevelTeam</p>
-      </footer>       
-
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./main.js"></script>
-    <script type="text/javascript">
-      function tableToCSV() {
-        // Variable to store the final csv data
-        var csv_data = [];
-
-        // Get each row data
-        var rows = document.getElementsByTagName("tr");
-        for (var i = 0; i < rows.length; i++) {
-          // Get each column data
-          var cols = rows[i].querySelectorAll("td,th");
-
-          // Stores each csv row data
-          var csvrow = [];
-          for (var j = 0; j < cols.length; j++) {
-            // Get the text data of each cell
-            // of a row and push it to csvrow
-            csvrow.push(cols[j].innerHTML);
+          // Kirim permintaan ke server untuk memeriksa kecocokan nama pengguna dan kata sandi
+          // Simulasikan dengan mengecek username dan password sederhana
+          if (username === "admin" && password === "admin123") {
+            // Redirect ke halaman sukses
+            window.location = "./dashboard-data.html";
+          } else {
+            // Tampilkan pesan kesalahan
+            alert("Invalid username or password. Please try again.");
           }
-
-          // Combine each column value with comma
-          csv_data.push(csvrow.join(","));
-        }
-
-        // Combine each row data with new line character
-        csv_data = csv_data.join("\n");
-
-        // Call this function to download csv file
-        downloadCSVFile(csv_data);
-      }
-
-      function downloadCSVFile(csv_data) {
-        // Create CSV file object and feed
-        // our csv_data into it
-        CSVFile = new Blob([csv_data], {
-          type: "text/csv",
         });
-
-        // Create to temporary link to initiate
-        // download process
-        var temp_link = document.createElement("a");
-
-        // Download csv file
-        temp_link.download = "data-waterlevel.csv";
-        var url = window.URL.createObjectURL(CSVFile);
-        temp_link.href = url;
-
-        // This link should not be displayed
-        temp_link.style.display = "none";
-        document.body.appendChild(temp_link);
-
-        // Automatically click the link to
-        // trigger download
-        temp_link.click();
-        document.body.removeChild(temp_link);
-      }
     </script>
+ 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
