--- a/dashboard-data.html
+++ b/dashboard-data.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta http-equiv="refresh"  content="3" /> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="refresh"  content="2" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard Water Level</title>
     <link
@@ -29,6 +29,7 @@
     <!-- #### navbar end #### -->
 
     <section id="page-main">
+
       <div class="container mt-4">
         <table id="myTable" class="mx-auto"></table>
       </div>
@@ -41,11 +42,9 @@
       </div>
     </section>
 
-    <footer class="py-3 mt-5">
+    <!-- <footer class="py-3 mt-5">
       <p class="my-auto">Developed by @kelompokWaterLevel</p>
-    </footer>
-
-   
+    </footer> -->
 
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
@@ -109,5 +108,15 @@
         document.body.removeChild(temp_link);
       }
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
